NIFI-11295 Expanded Mapping File property to also take the mapping file content.